--- a/src/main/webapp/view/login.html
+++ b/src/main/webapp/view/login.html
@@ -1,3 +1,32 @@
+<div class="login-box">
+    <div class="login-logo">
+        <a href="<?=$this->url('login')?>"><b>Nome do Salão</b></a>
+    </div><!-- /.login-logo -->
+    <div class="login-box-body">
+        <p class="login-box-msg">Entre com o Login e Senha ou <a href="/registro" class="text-center">Registre-se</a></p>
+        <form action="<?=$this->url('agenda')?>" method="get">
+            <div class="form-group has-feedback">
+                <input type="email" class="form-control" placeholder="Email">
+                <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+            </div>
+            <div class="form-group has-feedback">
+                <input type="password" class="form-control" placeholder="Password">
+                <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+            </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <button type="submit" class="btn btn-primary btn-block btn-flat">Login</button>
+                </div><!-- /.col -->
+            </div>
+        </form>
+
+        <a href="/recuperar-senha">Eu esqueci minha senha</a><br>
+
+    </div><!-- /.login-box-body -->
+</div><!-- /.login-box -->
+
+
+<!--
 <div class="col-md-6 col-md-offset-3">
     <h2>Login</h2>
     <form name="form" ng-submit="form.$valid && vm.login()" novalidate>
@@ -22,3 +51,4 @@
         <div ng-if="vm.error" class="alert alert-danger">{{vm.error}}</div>
     </form>
 </div>
+-->
