--- a/src/main/webapp/view/agenda.html
+++ b/src/main/webapp/view/agenda.html
@@ -2,7 +2,7 @@
 <section class="content-header">
     <h1>Agenda</h1>
     <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Agenda</a></li>
+        <li><a ui-sref="agenda"><i class="fa fa-dashboard"></i> Agenda</a></li>
     </ol>
 </section>
 
