--- a/src/main/webapp/view/header.html
+++ b/src/main/webapp/view/header.html
@@ -12,16 +12,16 @@
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="">
-                        <a href="/agenda"><i class="fa fa-calendar margin-r-5"></i> Agenda</a>
+                        <a ui-sref="agenda"><i class="fa fa-calendar margin-r-5"></i> Agenda</a>
                     </li>
                     <li class="">
-                        <a href="/salao"><i class="fa fa-cogs margin-r-5"></i> Salão</a>
+                        <a ui-sref="salao"><i class="fa fa-cogs margin-r-5"></i> Salão</a>
                     </li>
                     <li class="">
-                        <a href="/profissional"><i class="fa fa-user margin-r-5"></i> Profissional</a>
+                        <a ui-sref="profissional"><i class="fa fa-user margin-r-5"></i> Profissional</a>
                     </li>
                     <li class="">
-                        <a href="/cliente"><i class="fa fa-users margin-r-5"></i> Clientes</a>
+                        <a ui-sref="cliente"><i class="fa fa-users margin-r-5"></i> Clientes</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
