--- a/src/main/webapp/view/login.html
+++ b/src/main/webapp/view/login.html
@@ -1,10 +1,7 @@
 <div class="login-box">
-    <div class="login-logo">
-        <a href="<?=$this->url('login')?>"><b>Nome do Salão</b></a>
-    </div><!-- /.login-logo -->
     <div class="login-box-body">
         <p class="login-box-msg">Entre com o Login e Senha ou <a href="/registro" class="text-center">Registre-se</a></p>
-        <form action="<?=$this->url('agenda')?>" method="get">
+        <form action=#" method="get">
             <div class="form-group has-feedback">
                 <input type="email" class="form-control" placeholder="Email">
                 <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
@@ -20,7 +17,7 @@
             </div>
         </form>
 
-        <a href="/recuperar-senha">Eu esqueci minha senha</a><br>
+        <a ui-sref="recuperar-senha">Eu esqueci minha senha</a><br>
 
     </div><!-- /.login-box-body -->
 </div><!-- /.login-box -->
