--- a/src/main/webapp/view/recuperar-senha.html
+++ b/src/main/webapp/view/recuperar-senha.html
@@ -1,7 +1,4 @@
 <div class="login-box">
-    <div class="login-logo">
-        <a href="<?=$this->url('login')?>"><b>Nome do Salão</b></a>
-    </div><!-- /.login-logo -->
     <div class="login-box-body">
         <p class="login-box-msg">Digite o email cadastrado</p>
         <form action="#" method="get">
@@ -16,7 +13,7 @@
             </div>
         </form>
 
-        <a href="/login">Login</a><br>
+        <a ui-sref="login">Login</a><br>
 
     </div><!-- /.login-box-body -->
 </div><!-- /.login-box -->
