--- a/src/main/webapp/view/registro.html
+++ b/src/main/webapp/view/registro.html
@@ -1,8 +1,4 @@
 <div class="register-box">
-    <div class="register-logo">
-        <a href="<?=$this->url('login')?>"><b>Nome do Salão</b></a>
-    </div>
-
     <div class="register-box-body">
         <p class="login-box-msg">Registre-se</p>
         <form action="#" method="get">
@@ -37,6 +33,6 @@
             </div>
         </form>
 
-        <a href="/login" class="text-center">Eu já tenho um registro</a>
+        <a ui-sref="login" class="text-center">Eu já tenho um registro</a>
     </div><!-- /.form-box -->
 </div><!-- /.register-box -->
