--- a/src/main/webapp/view/salao.html
+++ b/src/main/webapp/view/salao.html
@@ -178,29 +178,28 @@
 
                     <div class="tab-pane" id="servicos">
                         <div>
-                            <a class="btn btn-primary" data-toggle="modal" data-target="#novo-servico"><i class="fa fa-fw fa-plus-circle"></i>Novo Serviço</a>
+                            <a class="btn btn-primary" data-toggle="modal" ng-click="adicionar(servico)"><i class="fa fa-fw fa-plus-circle"></i>Novo Serviço</a>
                         </div>
                         <br />
                         <table class="table table-condensed">
                             <tr>
                                 <th>Serviço</th>
                                 <th>Duração</th>
-                                <th>Valor Padrão (R$)</th>
-                                <th>A partir de (R$)</th>
-                                <th>Até (R$)</th>
+                                <th>Valor Mínimo (R$)</th>
+                                <th>Valor Maximo(R$)</th>
                                 <th></th>
                             </tr>
-                            <tr>
-                                <td>Corte Feminino</td>
-                                <td>00:40</td>
-                                <td>R$ 25,00</td>
-                                <td>R$ 00,00</td>
-                                <td>R$ 00,00</td>
+                            <tr ng-repeat="servico in servicos">
+                                <td>{{servico.descricao}}</td>
+                                <td>{{servico.duracao | date: 'HH:mm'}}</td>
+                                <td>{{servico.valorMinimo | currency: 'R$ '}}</td>
+                                <td>{{servico.valorMinimo | currency: 'R$ '}}</td>
                                 <td>
-                                    <a data-toggle="modal" data-target="#editar-servico"><i class="fa fa-fw fa-edit"></i></a>
-                                    <a data-toggle="modal" data-target="#excluir-servico"><i class="fa fa-fw fa-trash"></i></a>
+                                    <a data-toggle="modal" ng-click="editar(servico)" ><i class="fa fa-fw fa-edit"></i></a>
+                                    <a data-toggle="modal" ng-click="confirmExcluir(servico)"><i class="fa fa-fw fa-trash"></i></a>
                                 </td>
                             </tr>
+
                         </table>
 
                         <div class="fade modal" id="novo-servico">
@@ -217,7 +216,7 @@
                                                     <label class="control-label">Serviço</label>
                                                 </div>
                                                 <div class="col-sm-9">
-                                                    <input type="text" class="form-control" placeholder="Nome do serviço">
+                                                    <input type="text" class="form-control" placeholder="Nome do serviço" ng-model="servico.descricao">
                                                 </div>
                                             </div>
                                             <div class="form-group">
@@ -225,38 +224,31 @@
                                                     <label class="control-label">Duração</label>
                                                 </div>
                                                 <div class="col-sm-9">
-                                                    <input type="time" class="form-control">
+                                                    <input type="time" class="form-control" ng-model="servico.duracao">
                                                 </div>
                                             </div>
                                             <div class="form-group">
                                                 <div class="col-sm-3">
-                                                    <label class="control-label">Valor Padrão  (R$)</label>
+                                                    <label class="control-label">Valor Mínimo  (R$)</label>
                                                 </div>
                                                 <div class="col-sm-9">
-                                                    <input type="number" class="form-control" min="1" step="any" placeholder="Valor em Reais">
+                                                    <input type="number" class="form-control" min="1" step="any" placeholder="Valor em Reais" ng-model="servico.valorMinimo">
                                                 </div>
                                             </div>
                                             <div class="form-group">
                                                 <div class="col-sm-3">
-                                                    <label class="control-label">A partir de  (R$)</label>
+                                                    <label class="control-label">Valor Máximo  (R$)</label>
                                                 </div>
                                                 <div class="col-sm-9">
-                                                    <input type="number" class="form-control" min="1" step="any"  placeholder="Valor em Reais">
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <div class="col-sm-3">
-                                                    <label class="control-label">Até (R$)</label>
-                                                </div>
-                                                <div class="col-sm-9">
-                                                    <input type="number" class="form-control" min="1" step="any"  placeholder="Valor em Reais">
+                                                    <input type="number" class="form-control" min="1" step="any"  placeholder="Valor em Reais" ng-model="servico.valorMaximo">
                                                 </div>
                                             </div>
                                         </form>
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Salvar</button>
+                                        <button type="button" class="btn btn-primary" ng-hide="!servico.id" ng-click="atualizar(servico)" >Atualizar</button>
+                                        <button type="button" class="btn btn-primary" ng-hide="servico.id" ng-click="salvar(servico)" >Salvar</button>
                                     </div>
                                 </div>
                             </div>
@@ -274,10 +266,14 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Sim</button>
+                                        <button type="button" class="btn btn-primary" ng-click="excluir(servico)">Sim</button>
                                     </div>
                                 </div>
                             </div>
+                        </div>
+
+                        <div>
+                            <ul uib-pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize"  ng-model="currentPage" ng-change="pageChanged()"></ul>
                         </div>
 
                     </div>
