--- a/src/main/webapp/view/salao.html
+++ b/src/main/webapp/view/salao.html
@@ -82,15 +82,15 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="input-tel-fixo" class="col-sm-2 control-label" >Telefone fixo</label>
+                                        <label for="input-tel-fixo" class="col-sm-2 control-label" >Telefone fixo {{maskModel}}</label>
                                         <div class="col-sm-2">
-                                            <input type="tel" class="form-control" id="input-tel-fixo" placeholder="Telefone fixo do salão">
+                                            <input type="text" class="form-control" id="input-tel-fixo" ng-model='maskModel' placeholder="Telefone fixo do salão" mask='(99) 9?9999-9999' mask-restrict='reject' mask-clean='true'>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="input-tel-celulae" class="col-sm-2 control-label">Telefone celular</label>
+                                        <label for="input-tel-celulae" class="col-sm-2 control-label">Telefone celular {{maskModel2}}</label>
                                         <div class="col-sm-2">
-                                            <input type="tel" class="form-control" id="input-tel-celular" placeholder="Telefone celular do salão">
+                                            <input type="text" class="form-control" id="input-tel-celular" placeholder="Telefone celular do salão" ng-model='maskModel2' mask='(99) 9?9999-9999' mask-restrict='reject' mask-clean='true'>
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -176,9 +176,9 @@
                         </div>
                     </div>
 
-                    <div class="tab-pane" id="servicos">
+                    <div class="tab-pane" id="servicos" ng-controller="servicoController">
                         <div>
-                            <a class="btn btn-primary" data-toggle="modal" ng-click="adicionar(servico)"><i class="fa fa-fw fa-plus-circle"></i>Novo Serviço</a>
+                            <a class="btn btn-primary" data-toggle="modal" ng-click="adicionar()"><i class="fa fa-fw fa-plus-circle"></i>Novo Serviço</a>
                         </div>
                         <br />
                         <table class="table table-condensed">
@@ -193,62 +193,87 @@
                                 <td>{{servico.descricao}}</td>
                                 <td>{{servico.duracao | date: 'HH:mm'}}</td>
                                 <td>{{servico.valorMinimo | currency: 'R$ '}}</td>
-                                <td>{{servico.valorMinimo | currency: 'R$ '}}</td>
+                                <td>{{servico.valorMaximo | currency: 'R$ '}}</td>
                                 <td>
                                     <a data-toggle="modal" ng-click="editar(servico)" ><i class="fa fa-fw fa-edit"></i></a>
                                     <a data-toggle="modal" ng-click="confirmExcluir(servico)"><i class="fa fa-fw fa-trash"></i></a>
                                 </td>
                             </tr>
-
                         </table>
+                        <div>
+                            <ul uib-pagination total-items="totalItems" ng-model="currentPage" items-per-page="itemsPerPage" max-size="maxSize" ng-change="pageChanged()"></ul>
+                        </div>
 
-                        <div class="fade modal" id="novo-servico">
+                        <div class="fade modal" id="modal-servico">
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                        <h4 class="modal-title" id="myModalLabel">Novo Serviço</h4>
+                                        <h4 class="modal-title" id="modal-servico-title">Novo Serviço</h4>
                                     </div>
                                     <div class="modal-body">
-                                        <form class="form-horizontal" role="form">
-                                            <div class="form-group">
+                                        <form class="form-horizontal" role="form" name="servicoForm">
+                                            <div class="form-group" ng-class="{'has-error': (servicoForm.descricao.$invalid && servicoForm.descricao.$dirty)}" >
                                                 <div class="col-sm-3">
                                                     <label class="control-label">Serviço</label>
                                                 </div>
                                                 <div class="col-sm-9">
-                                                    <input type="text" class="form-control" placeholder="Nome do serviço" ng-model="servico.descricao">
+                                                    <input type="text" class="form-control" placeholder="Nome do serviço" name="descricao" ng-model="servico.descricao" ng-required="true" ng-minlength="5">
+                                                    <div ng-messages="servicoForm.descricao.$error" ng-show="servicoForm.descricao.$dirty">
+                                                        <div ng-message="required" class="help-block">
+                                                            Por favor, preencher o campo descrição
+                                                        </div>
+                                                        <div ng-message="minlength" class="help-block">
+                                                            O campo descrição de ter no mínimo 5 caracteres
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
-                                            <div class="form-group">
+                                            <div class="form-group" ng-class="{'has-error': (servicoForm.duracao.$invalid && servicoForm.duracao.$dirty)}">
                                                 <div class="col-sm-3">
                                                     <label class="control-label">Duração</label>
                                                 </div>
                                                 <div class="col-sm-9">
-                                                    <input type="time" class="form-control" ng-model="servico.duracao">
+                                                    <input type="time" class="form-control" name="duracao" ng-model="servico.duracao" ng-required="true">
+                                                    <div ng-messages="servicoForm.duracao.$error" ng-show="servicoForm.duracao.$dirty">
+                                                        <div ng-message="required" class="help-block">
+                                                            Por favor, preencher o campo duração
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
-                                            <div class="form-group">
+                                            <div class="form-group" ng-class="{'has-error': (servicoForm.valorMinimo.$invalid && servicoForm.valorMinimo.$dirty)}">
                                                 <div class="col-sm-3">
                                                     <label class="control-label">Valor Mínimo  (R$)</label>
                                                 </div>
                                                 <div class="col-sm-9">
-                                                    <input type="number" class="form-control" min="1" step="any" placeholder="Valor em Reais" ng-model="servico.valorMinimo">
+                                                    <input type="text" class="form-control" placeholder="Valor em Reais" name="valorMinimo" ng-model="servico.valorMinimo" ng-currency currency-symbol="" ng-required="true">
+                                                    <div ng-messages="servicoForm.valorMinimo.$error" ng-show="servicoForm.valorMinimo.$dirty">
+                                                        <div ng-message="required" class="help-block">
+                                                            Por favor, preencher o campo valor mínimo
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
-                                            <div class="form-group">
+                                            <div class="form-group" ng-class="{'has-error': (servicoForm.valorMaximo.$invalid && servicoForm.valorMaximo.$dirty)}">
                                                 <div class="col-sm-3">
                                                     <label class="control-label">Valor Máximo  (R$)</label>
                                                 </div>
                                                 <div class="col-sm-9">
-                                                    <input type="number" class="form-control" min="1" step="any"  placeholder="Valor em Reais" ng-model="servico.valorMaximo">
+                                                    <input type="text" class="form-control" placeholder="Valor em Reais" name="valorMaximo" ng-model="servico.valorMaximo" ng-currency currency-symbol="" ng-required="true">
+                                                    <div ng-messages="servicoForm.valorMaximo.$error" ng-show="servicoForm.valorMaximo.$dirty">
+                                                        <div ng-message="required" class="help-block">
+                                                            Por favor, preencher o campo valor máximo
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </form>
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary" ng-hide="!servico.id" ng-click="atualizar(servico)" >Atualizar</button>
-                                        <button type="button" class="btn btn-primary" ng-hide="servico.id" ng-click="salvar(servico)" >Salvar</button>
+                                        <button type="button" class="btn btn-primary" ng-hide="!servico.id" ng-click="atualizar(servico)" ng-disabled="servicoForm.$invalid" >Atualizar</button>
+                                        <button type="button" class="btn btn-primary" ng-hide="servico.id" ng-click="salvar(servico)" ng-disabled="servicoForm.$invalid" >Salvar</button>
                                     </div>
                                 </div>
                             </div>
@@ -259,7 +284,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                        <h4 class="modal-title" id="myModalLabel">Excluir Serviço</h4>
+                                        <h4 class="modal-title" id="excluir-servico-title">Excluir Serviço</h4>
                                     </div>
                                     <div class="modal-body">
                                         <p>Deseja excluir este serviço ?</p>
@@ -270,10 +295,6 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-
-                        <div>
-                            <ul uib-pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize"  ng-model="currentPage" ng-change="pageChanged()"></ul>
                         </div>
 
                     </div>
