Crud basico de funcionario

--- a/src/main/webapp/view/salao.html
+++ b/src/main/webapp/view/salao.html
@@ -209,7 +209,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                        <h4 class="modal-title" id="modal-servico-title">Novo Serviço</h4>
+                                        <h4 class="modal-title" id="modal-servico-title">Serviço</h4>
                                     </div>
                                     <div class="modal-body">
                                         <form class="form-horizontal" role="form" name="servicoForm">
@@ -224,7 +224,7 @@
                                                             Por favor, preencher o campo descrição
                                                         </div>
                                                         <div ng-message="minlength" class="help-block">
-                                                            O campo descrição de ter no mínimo 5 caracteres
+                                                            O campo descrição deve ter no mínimo 5 caracteres
                                                         </div>
                                                     </div>
                                                 </div>
