Adicionado mensagem de alerta de exemplo

--- a/src/main/webapp/view/profissional.html
+++ b/src/main/webapp/view/profissional.html
@@ -84,6 +84,15 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <form class="form-horizontal" name="dadosProfissionalForm">
+
+                                        <div class="form-group">
+                                            <div class="col-sm-offset-1 col-sm-10">
+                                                <div class="alert alert-danger alert-dismissible">
+                                                    Danger alert preview. This alert is dismissable.
+                                                </div>
+                                            </div>
+                                        </div>
+
                                         <div class="form-group" ng-class="{'has-error': (dadosProfissionalForm.nome.$invalid && dadosProfissionalForm.nome.$dirty)}">
                                             <label for="input-nome" class="col-sm-2 control-label">Nome</label>
                                             <div class="col-sm-9">
