--- a/src/main/webapp/view/profissional.html
+++ b/src/main/webapp/view/profissional.html
@@ -195,19 +195,18 @@
                                 <tr>
                                     <th>Serviço</th>
                                     <th>Duração</th>
-                                    <th>Valor Padrão (R$)</th>
-                                    <th>A partir de (R$)</th>
-                                    <th>Até (R$)</th>
+                                    <th>Valor Mínimo (R$)</th>
+                                    <th>Valor Maximo(R$)</th>
                                     <th></th>
                                 </tr>
-                                <tr>
-                                    <td>Corte Feminino</td>
-                                    <td>00:40</td>
-                                    <td>R$ 25,00</td>
-                                    <td>R$ 00,00</td>
-                                    <td>R$ 00,00</td>
+                                <tr ng-repeat="servico in profissional.servicosPrestados" >
+                                    <td>{{servico.descricao}}</td>
+                                    <td>{{servico.duracao | date: 'HH:mm'}}</td>
+                                    <td>{{servico.valorMinimo | currency: 'R$ '}}</td>
+                                    <td>{{servico.valorMaximo | currency: 'R$ '}}</td>
                                     <td><a data-toggle="modal" data-target="#excluir-servico"><i class="fa fa-fw fa-trash"></i></a></td>
                                 </tr>
+
                             </table>
 
                         </div>
