--- a/src/main/webapp/view/profissional.html
+++ b/src/main/webapp/view/profissional.html
@@ -85,14 +85,6 @@
                                 <div class="col-md-12">
                                     <form class="form-horizontal" name="dadosProfissionalForm">
 
-                                        <div class="form-group">
-                                            <div class="col-sm-offset-1 col-sm-10">
-                                                <div class="alert alert-danger alert-dismissible">
-                                                    Danger alert preview. This alert is dismissable.
-                                                </div>
-                                            </div>
-                                        </div>
-
                                         <div class="form-group" ng-class="{'has-error': (dadosProfissionalForm.nome.$invalid && dadosProfissionalForm.nome.$dirty)}">
                                             <label for="input-nome" class="col-sm-2 control-label">Nome</label>
                                             <div class="col-sm-9">
@@ -201,7 +193,7 @@
                                     <td>{{servico.duracao | date: 'HH:mm'}}</td>
                                     <td>{{servico.valorMinimo | currency: 'R$ '}}</td>
                                     <td>{{servico.valorMaximo | currency: 'R$ '}}</td>
-                                    <td><a data-toggle="modal" data-target="#excluir-servico"><i class="fa fa-fw fa-trash"></i></a></td>
+                                    <td><a ng-click="removeServico(profissional.id, servico.id)" ><i class="fa fa-fw fa-trash"></i></a></td>
                                 </tr>
 
                             </table>
