--- a/src/main/webapp/view/salao.html
+++ b/src/main/webapp/view/salao.html
@@ -191,7 +191,7 @@
                             </tr>
                             <tr ng-repeat="servico in servicos">
                                 <td>{{servico.descricao}}</td>
-                                <td>{{servico.duracao | date: 'HH:mm'}}</td>
+                                <td>{{servico.duracao | minutesToHours}}</td>
                                 <td>{{servico.valorMinimo | currency: 'R$ '}}</td>
                                 <td>{{servico.valorMaximo | currency: 'R$ '}}</td>
                                 <td>
@@ -201,6 +201,8 @@
                             </tr>
                         </table>
                         <div>
+                            {{teste}}
+                            <input type="text" time-input ng-model="teste" >
                             <ul uib-pagination total-items="totalItems" ng-model="currentPage" items-per-page="itemsPerPage" max-size="maxSize" ng-change="pageChanged()"></ul>
                         </div>
 
@@ -233,12 +235,15 @@
                                                 <div class="col-sm-3">
                                                     <label class="control-label">Duração</label>
                                                 </div>
-                                                <div class="col-sm-9">
-                                                    <input type="time" class="form-control" name="duracao" ng-model="servico.duracao" ng-required="true">
-                                                    <div ng-messages="servicoForm.duracao.$error" ng-show="servicoForm.duracao.$dirty">
-                                                        <div ng-message="required" class="help-block">
-                                                            Por favor, preencher o campo duração
-                                                        </div>
+                                                <div class="col-sm-3">
+                                                    <input type="number" class="form-control" name="duracao" ng-model="servico.duracao" ng-required="true" min="0">
+                                                </div>
+                                                <div class="col-sm-6">
+                                                    <label class="control-label left">{{servico.duracao | minutesToHours}}</label>
+                                                </div>
+                                                <div ng-messages="servicoForm.duracao.$error" ng-show="servicoForm.duracao.$dirty" class="col-sm-9 col-lg-offset-3">
+                                                    <div ng-message="required" class="help-block">
+                                                        Por favor, preencher o campo duração
                                                     </div>
                                                 </div>
                                             </div>
