--- a/src/main/webapp/view/salao.html
+++ b/src/main/webapp/view/salao.html
@@ -75,10 +75,10 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="input-horario-inicio" class="col-sm-2 control-label">Horário</label>
+                                        <label for="input-horario-inicio" class="col-sm-2 control-label">Horário {{inicio}} - {{fim}}</label>
                                         <div class="col-sm-10">
-                                            <input style="width: 100px; text-align: center; display: inline-block;" type="time" value="08:00" class="form-control" id="input-horario-inicio" > Até
-                                            <input style="width: 100px; text-align: center; display: inline-block;" type="time" value="20:00" class="form-control" id="input-horario-fim" >
+                                            <input style="width: 100px; text-align: center; display: inline-block;" type="text" placeholder="Início" class="form-control" id="input-horario-inicio" time-input ng-model="inicio" > Até
+                                            <input style="width: 100px; text-align: center; display: inline-block;" type="text" placeholder="Fim" class="form-control" id="input-horario-fim" time-input ng-model="fim" >
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -201,8 +201,6 @@
                             </tr>
                         </table>
                         <div>
-                            {{teste}}
-                            <input type="text" time-input ng-model="teste" >
                             <ul uib-pagination total-items="totalItems" ng-model="currentPage" items-per-page="itemsPerPage" max-size="maxSize" ng-change="pageChanged()"></ul>
                         </div>
 
