--- a/src/main/webapp/view/salao.html
+++ b/src/main/webapp/view/salao.html
@@ -75,7 +75,7 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="input-horario-inicio" class="col-sm-2 control-label">Horário {{inicio}} - {{fim}}</label>
+                                        <label for="input-horario-inicio" class="col-sm-2 control-label">Horário</label>
                                         <div class="col-sm-10">
                                             <input style="width: 100px; text-align: center; display: inline-block;" type="text" placeholder="Início" class="form-control" id="input-horario-inicio" time-input ng-model="inicio" > Até
                                             <input style="width: 100px; text-align: center; display: inline-block;" type="text" placeholder="Fim" class="form-control" id="input-horario-fim" time-input ng-model="fim" >
