Adicionado horario de trabalho para profissional

--- a/src/main/webapp/view/profissional.html
+++ b/src/main/webapp/view/profissional.html
@@ -203,7 +203,7 @@
                         <div class="tab-pane" id="horarios">
                             <table class="table table-condensed">
                                 <tr>
-                                    <th class="col-sm-8">Dia</th>
+                                    <th class="col-sm-3">Dia</th>
                                     <th class="col-sm-1">Entrada</th>
                                     <th class="col-sm-1">Saída</th>
                                     <th class="col-sm-1">Entrada</th>
@@ -212,161 +212,161 @@
                                 <tr>
                                     <td>Domingo</td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control" time-input ng-model="profissional.horariosTrabalho[0].entrada1" >
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control" time-input ng-model="profissional.horariosTrabalho[0].saida1">
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control" time-input ng-model="profissional.horariosTrabalho[0].entrada2">
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control" time-input ng-model="profissional.horariosTrabalho[0].saida2">
                                         </div>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>Segunda-Feira</td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>Terça-Feira</td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>Quarta-Feira</td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>Quinta-Feira</td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>Sexta-Feira</td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>Sábado</td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="col-sm-3 input-group input-group-sm">
-                                            <input type="time" class="form-control">
+                                        <div class="col-sm-9 input-group input-group-sm">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </td>
                                 </tr>
