Adicionado horario de trabalho para profissional

--- a/src/main/webapp/view/profissional.html
+++ b/src/main/webapp/view/profissional.html
@@ -213,22 +213,22 @@
                                     <td>Domingo</td>
                                     <td>
                                         <div class="col-sm-9 input-group input-group-sm">
-                                            <input type="text" class="form-control" time-input ng-model="profissional.horariosTrabalho[0].entrada1" >
+                                            <input type="text" class="form-control" time-input ng-model="entrada1" >
                                         </div>
                                     </td>
                                     <td>
                                         <div class="col-sm-9 input-group input-group-sm">
-                                            <input type="text" class="form-control" time-input ng-model="profissional.horariosTrabalho[0].saida1">
+                                            <input type="text" class="form-control" time-input ng-model="saida1">
                                         </div>
                                     </td>
                                     <td>
                                         <div class="col-sm-9 input-group input-group-sm">
-                                            <input type="text" class="form-control" time-input ng-model="profissional.horariosTrabalho[0].entrada2">
+                                            <input type="text" class="form-control" time-input ng-model="entrada2">
                                         </div>
                                     </td>
                                     <td>
                                         <div class="col-sm-9 input-group input-group-sm">
-                                            <input type="text" class="form-control" time-input ng-model="profissional.horariosTrabalho[0].saida2">
+                                            <input type="text" class="form-control" time-input ng-model="saida2">
                                         </div>
                                     </td>
                                 </tr>
